add site header

--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
 </head>
 <body>
 
+  <!-- SITE-HEADER  -->
+  <header class="site-header">
+    <div class="container site-header__container">
+      <a class="site-header__logo logo" href="#">
+        <img class="logo__img" src="img/logo.svg" alt="bookmark logo" width="149" height="25">
+      </a>
+
+      <nav class="site-header__sitenav sitenav">
+        <ul class="sitenav__list">
+          <li class="sitenav__item"><a class="sitenav__link" href="#">features</a></li>
+          <li class="sitenav__item"><a class="sitenav__link" href="#">pricing</a></li>
+          <li class="sitenav__item"><a class="sitenav__link" href="#">contact</a></li>
+        </ul>
+      </nav>
+
+      <a class="button button--site-header button--red" href="#">login</a>
+    </div>
+  </header>
 
   <script src="js/main.js"></script>
 </body>
