--- a/index.html
+++ b/index.html
@@ -32,6 +32,28 @@
     </div>
   </header>
 
+
+  <!-- MAIN-CONTENT  -->
+  <main class="main-content">
+    <!-- HERO  -->
+    <div class="hero">
+      <div class="hero__container container">
+        <div class="hero__content">
+          <h1 class="hero__title">A Simple Bookmark Manager</h1>
+          <p class="hero-description">A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
+          <div class="hero__actions">
+            <a class="hero__actions-item button button--blue" href="#">Get it on Chrome</a>
+            <a class="hero__actions-item button button--gray" href="#">Get it on Firefox</a>
+          </div>
+        </div>
+
+        <img class="hero__img" src="img/hero-img.svg" alt="bookmark manager illustration" width="578" height="385">
+      </div>
+    </div>
+
+
+
+  </main>
   <script src="js/main.js"></script>
 </body>
 </html>
