--- a/index.html
+++ b/index.html
@@ -53,13 +53,60 @@
 
 
     <!-- FEATURES  -->
-    <section class="section">
+    <section class="features section">
       <div class="container">
-        <div class="section__info">
+        <div class="features__section-info section__info">
           <h2 class="section__title">Download the extension</h2>
           <p class="section__description">We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to prioritize.</p>
         </div>
+
+        <!-- TABS  -->
+        <div class="tabs">
+          <!-- TABS-LIST  -->
+          <ul class="tabs__list">
+            <li class="tabs__item tabs__item--active"><a class="tabs__link" href="#feature-simple-bookmarking">Simple Bookmarking</a></li>
+            <li class="tabs__item"><a class="tabs__link" href="#feature-speedy-searching">Speedy Searching</a></li>
+            <li class="tabs__item"><a class="tabs__link" href="#feature-easy-sharing">Easy Sharing</a></li>
+          </ul>
+        </div>
       </div>
+
+
+          <!-- TABS-PANELS -->
+          <div class="tabs__panels">
+            <div class="container">
+              <div class="tabs__panel tabs__panel--active" id="feature-simple-bookmarking">
+                <section class="feature-tab-panel">
+                  <img class="feature-tab-panel__img" src="img/bookmark-illustration.svg" alt="bookmark mmanager illustration" width="536" height="346">
+                  <div class="feature-tab-panel__info">
+                    <h3 class="feature-tab-oanel__title">Bookmark in one click</h3>
+                    <p class="feature-tab-panel__text">Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
+                    <a class="button button--blue" href="#">More Info</a>
+                  </div>
+                </section>
+              </div>
+              <div class="tabs__panel">
+                <section class="feature-tab-panel" id="feature-speedy-searching">
+                  <img class="feature-tab-panel__img" src="img/search-bookmark-img.svg" alt="search bookmark img" width="468" height="393">
+                  <div class="feature-tab-panel__info">
+                    <h3 class="feature-tab-oanel__title">Intelligent search</h3>
+                    <p class="feature-tab-panel__text">Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.</p>
+                    <a class="button button--blue" href="#">More Info</a>
+                  </div>
+                </section>
+              </div>
+              <div class="tabs__panel">
+                <section class="feature-tab-panel" id="feature-easy-sharing">
+                  <img class="feature-tab-panel__img" src="img/bookmark-image.svg" alt="bookmark image" width="440" height="380">
+                  <div class="feature-tab-panel__info">
+                    <h3 class="feature-tab-oanel__title">Share your bookmarks</h3>
+                    <p class="feature-tab-panel__text">Easily share your bookmarks and collections with others. Create a shareable link that you can send at the click of a button.</p>
+                    <a class="button button--blue" href="#">More Info</a>
+                  </div>
+                </section>
+              </div>
+            </div>
+          </div>
     </section>
 
 
