--- a/index.html
+++ b/index.html
@@ -64,9 +64,15 @@
         <div class="tabs">
           <!-- TABS-LIST  -->
           <ul class="tabs__list">
-            <li class="tabs__item tabs__item--active"><a class="tabs__link" href="#feature-simple-bookmarking">Simple Bookmarking</a></li>
-            <li class="tabs__item"><a class="tabs__link" href="#feature-speedy-searching">Speedy Searching</a></li>
-            <li class="tabs__item"><a class="tabs__link" href="#feature-easy-sharing">Easy Sharing</a></li>
+            <li class="tabs__item tabs__item--active">
+              <a class="tabs__link js-tab-link" href="#feature-simple-bookmarking" data-tab-target="#feature-simple-bookmarking">Simple Bookmarking</a>
+            </li>
+            <li class="tabs__item">
+              <a class="tabs__link js-tab-link" href="#feature-speedy-searching" data-tab-target="#feature-speedy-searching">Speedy Searching</a>
+            </li>
+            <li class="tabs__item">
+              <a class="tabs__link js-tab-link" href="#feature-easy-sharing" data-tab-target="#feature-easy-sharing">Easy Sharing</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -85,8 +91,8 @@
                   </div>
                 </section>
               </div>
-              <div class="tabs__panel">
-                <section class="feature-tab-panel" id="feature-speedy-searching">
+              <div class="tabs__panel" id="feature-speedy-searching">
+                <section class="feature-tab-panel" >
                   <img class="feature-tab-panel__img" src="img/search-bookmark-img.svg" alt="search bookmark img" width="468" height="393">
                   <div class="feature-tab-panel__info">
                     <h3 class="feature-tab-oanel__title">Intelligent search</h3>
@@ -95,8 +101,8 @@
                   </div>
                 </section>
               </div>
-              <div class="tabs__panel">
-                <section class="feature-tab-panel" id="feature-easy-sharing">
+              <div class="tabs__panel" id="feature-easy-sharing">
+                <section class="feature-tab-panel">
                   <img class="feature-tab-panel__img" src="img/bookmark-image.svg" alt="bookmark image" width="440" height="380">
                   <div class="feature-tab-panel__info">
                     <h3 class="feature-tab-oanel__title">Share your bookmarks</h3>
