--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="container">
               <div class="tabpanels__item tabpanels__item--active" id="feature-simple-bookmarking">
                 <section class="feature-tab-panel">
-                  <img class="feature-tab-panel__img" src="img/bookmark-illustration.svg" alt="bookmark mmanager illustration" width="536" height="346">
+                  <img class="feature-tab-panel__img feature-tab-panel__img--bookmark-manager" src="img/bookmark-illustration.svg" alt="bookmark mmanager illustration" width="536" height="346">
                   <div class="feature-tab-panel__info">
                     <h3 class="feature-tab-panel__title">Bookmark in one click</h3>
                     <p class="feature-tab-panel__text">Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
@@ -93,7 +93,7 @@
               </div>
               <div class="tabpanels__item" id="feature-speedy-searching">
                 <section class="feature-tab-panel" >
-                  <img class="feature-tab-panel__img" src="img/search-bookmark-img.svg" alt="search bookmark img" width="468" height="393">
+                  <img class="feature-tab-panel__img feature-tab-panel__img--simple" src="img/search-bookmark-img.svg" alt="search bookmark img" width="468" height="393">
                   <div class="feature-tab-panel__info">
                     <h3 class="feature-tab-panel__title">Intelligent search</h3>
                     <p class="feature-tab-panel__text">Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.</p>
@@ -103,7 +103,7 @@
               </div>
               <div class="tabpanels__item" id="feature-easy-sharing">
                 <section class="feature-tab-panel">
-                  <img class="feature-tab-panel__img" src="img/bookmark-image.svg" alt="bookmark image" width="440" height="380">
+                  <img class="feature-tab-panel__img feature-tab-panel__img--shering" src="img/bookmark-image.svg" alt="bookmark image" width="440" height="380">
                   <div class="feature-tab-panel__info">
                     <h3 class="feature-tab-panel__title">Share your bookmarks</h3>
                     <p class="feature-tab-panel__text">Easily share your bookmarks and collections with others. Create a shareable link that you can send at the click of a button.</p>
