add extansions swction

--- a/index.html
+++ b/index.html
@@ -117,11 +117,35 @@
 
 
     <!-- DOWNLOAD-HTE-EXTENTION  -->
-    <section class="section">
+    <section class="extansions section">
       <div class="container">
         <div class="section__info">
           <h2 class="section__title">Frequently Asked Questions</h2>
           <p class="section__description">Here are some of our FAQs. If you have any other questions you’d like answered please feel free to email us.</p>
+        </div>
+        <div class="extansions-inner">
+          <ul class="extansions__list">
+            <li class="extansions__item extansion">
+              <img class="extansion__img" src="img/chrome-logo.svg" alt="google chrome logo" width="105" height="100">
+              <h3 class="extansion__title">Add to Chrome</h3>
+              <p class="extansion__browser-version">Minimum version 62</p>
+              <a class="button button--blue button--block" href="#" target="_blank">Add & Install Extension</a>
+            </li>
+
+            <li class="extansions__item extansion">
+              <img class="extansion__img" src="img/firefox-logo.svg" alt="firefox logo" width="105" height="100">
+              <h3 class="extansion__title">Add to Firefox</h3>
+              <p class="extansion__browser-version">Minimum version 55</p>
+              <a class="button button--blue button--block" href="#" target="_blank">Add & Install Extension</a>
+            </li>
+
+            <li class="extansions__item extansion">
+              <img class="extansion__img" src="img/opera-logo.svg" alt="opera logo" width="105" height="100">
+              <h3 class="extansion__title">Add to opera</h3>
+              <p class="extansion__browser-version">Minimum version 46</p>
+              <a class="button button--blue button--block" href="#" target="_blank">Add & Install Extension</a>
+            </li>
+          </ul>
         </div>
       </div>
     </section>
