--- a/index.html
+++ b/index.html
@@ -152,11 +152,70 @@
 
 
     <!-- FAQ  -->
-    <section class="section">
+    <section class="faq section">
       <div class="container">
-        <div class="section__info">
+        <div class="faq__section-info section__info">
           <h2 class="section__title">Features</h2>
           <p class="section__description">Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
+        </div>
+        <div class="faq__inner">
+          <div class="faq__accordion">
+            <div class="accordion">
+              <section class="accordion__item">
+                <header class="accordion__item-header">
+                  <h3 class="accordion__item-title">What is Bookmark?</h3>
+                  <button class="accordion__item-toggler" type="button" aria-label="accordion item toggler">
+                    <svg class="accordion__item-toggler-icon" width="20" height="13" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="m2 2 8 8 8-8" stroke="currentColor" stroke-width="3"/></svg>
+                  </button>
+                </header>
+                <div class="accordion__item-content">
+                  <p class="accordion__item-text">Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
+                    ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
+                </div>
+              </section>
+
+              <section class="accordion__item">
+                <header class="accordion__item-header">
+                  <h3 class="accordion__item-title">How can I request a new browser?</h3>
+                  <button class="accordion__item-toggler" type="button" aria-label="accordion item toggler">
+                    <svg class="accordion__item-toggler-icon" width="20" height="13" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="m2 2 8 8 8-8" stroke="currentColor" stroke-width="3"/></svg>
+                  </button>
+                </header>
+                <div class="accordion__item-content">
+                  <p class="accordion__item-text">Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
+                    ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
+                </div>
+              </section>
+
+              <section class="accordion__item">
+                <header class="accordion__item-header">
+                  <h3 class="accordion__item-title">Is there a mobile app?</h3>
+                  <button class="accordion__item-toggler" type="button" aria-label="accordion item toggler">
+                    <svg class="accordion__item-toggler-icon" width="20" height="13" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="m2 2 8 8 8-8" stroke="currentColor" stroke-width="3"/></svg>
+                  </button>
+                </header>
+                <div class="accordion__item-content">
+                  <p class="accordion__item-text">Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
+                    ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
+                </div>
+              </section>
+
+              <section class="accordion__item">
+                <header class="accordion__item-header">
+                  <h3 class="accordion__item-title">What about other Chromium browsers?</h3>
+                  <button class="accordion__item-toggler" type="button" aria-label="accordion item toggler">
+                    <svg class="accordion__item-toggler-icon" width="20" height="13" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="m2 2 8 8 8-8" stroke="currentColor" stroke-width="3"/></svg>
+                  </button>
+                </header>
+                <div class="accordion__item-content">
+                  <p class="accordion__item-text">Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
+                    ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
+                </div>
+              </section>
+            </div>
+          </div>
+
+          <a class="button button--blue" href="#">More Info</a>
         </div>
       </div>
     </section>
