--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 
+
   <!-- SITE-HEADER  -->
   <header class="site-header">
     <div class="container site-header__container">
@@ -59,6 +60,7 @@
           <h2 class="section__title">Download the extension</h2>
           <p class="section__description">We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to prioritize.</p>
         </div>
+
 
         <!-- TABS  -->
         <div class="tabs">
@@ -216,6 +218,25 @@
           </div>
 
           <a class="button button--blue" href="#">More Info</a>
+        </div>
+      </div>
+    </section>
+
+
+    <!-- SUBSCRIPTION  -->
+    <section class="subscription">
+      <div class="container">
+        <div class="subscription__inner">
+              <p class="subscription__count-text">35,000+ already joined</p>
+            <h2 class="subscription__heading">Stay up-to-date with what we’re doing</h2>
+
+            <form class="subscription__form" action="https://echo.htmlacademy.ru" method="post">
+              <div class="subscription__field-wrapper">
+                <input class="subscription__field" type="email" name="email" placeholder="Enter your email address" aria-label="email" request>
+                <div class="subscription__error">Whoops, make sure it’s an email</div>
+              </div>
+              <button class="button button--red" type="submit">Contact Us</button>
+            </form>
         </div>
       </div>
     </section>
